# gptexteditor

./: .gitignore  README.md  gptextedit.py  pyproject.toml
gptexteditor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: gptexteditor.py
